--- a/sass/main.css
+++ b/sass/main.css
@@ -1,95 +1,110 @@
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap");
-.theme1 .calc {
+.theme0 .calc {
   background-color: hsl(222deg, 26%, 31%);
 }
-.theme1 .calc__container-logo, .theme1 .labels, .theme1 .calc__theme {
+.theme0 .calc__container-logo, .theme0 .labels, .theme0 .calc__theme {
   color: hsl(0deg, 0%, 100%);
 }
-.theme1 .calc__header-btns {
+.theme0 .calc__header-btns {
   background-color: hsl(223deg, 31%, 20%) !important;
 }
-.theme1 .toggleBtn {
+.theme0 .toggleBtn {
   background-color: hsl(6deg, 63%, 50%) !important;
 }
-.theme1 .calc__display {
+.theme0 .calc__display {
   background-color: hsl(224deg, 36%, 15%);
 }
-.theme1 .calc__numberContainer {
+.theme0 .calc__numberContainer {
   background-color: hsl(223deg, 31%, 20%) !important;
 }
-.theme1 .numsAndOperators {
+.theme0 .numsAndOperators {
   background-color: hsl(30deg, 25%, 89%) !important;
   box-shadow: 0 4px 0 0.2px hsl(28deg, 16%, 65%) !important;
 }
-.theme1 .delBtn, .theme1 .resetBtn {
+.theme0 .delBtn, .theme0 .resetBtn {
   background-color: hsl(225deg, 21%, 49%) !important;
   box-shadow: 0 4px 0 0.2px hsl(224deg, 28%, 35%) !important;
 }
-.theme1 .equalesBtn {
+.theme0 .equalesBtn {
   background-color: hsl(6deg, 63%, 50%) !important;
   box-shadow: 0 4px 0 0.2px hsl(6deg, 70%, 34%) !important;
 }
+.theme0 .delBtn, .theme0 .resetBtn, .theme0 .equalesBtn {
+  color: hsl(0deg, 0%, 100%) !important;
+}
 
-.theme2 .calc {
+.theme1 .calc {
   background-color: hsl(0deg, 0%, 90%);
 }
-.theme2 .calc__container-logo, .theme2 .labels, .theme2 .calc__theme {
+.theme1 .calc__container-logo, .theme1 .labels, .theme1 .calc__theme {
   color: hsl(60deg, 10%, 19%);
 }
-.theme2 .calc__header-btns {
+.theme1 .calc__header-btns {
   background-color: hsl(0deg, 5%, 81%) !important;
 }
-.theme2 .toggleBtn {
+.theme1 .toggleBtn {
   background-color: hsl(25deg, 98%, 40%) !important;
 }
-.theme2 .calc__display {
+.theme1 .calc__display {
   background-color: hsl(0deg, 0%, 93%);
 }
-.theme2 .calc__numberContainer {
+.theme1 .calc__numberContainer {
   background-color: hsl(0deg, 5%, 81%) !important;
 }
-.theme2 .numsAndOperators {
+.theme1 .numsAndOperators {
   background-color: hsl(45deg, 7%, 89%) !important;
   box-shadow: 0 4px 0 0.2px hsl(35deg, 11%, 61%) !important;
 }
-.theme2 .delBtn, .theme2 .resetBtn {
+.theme1 .delBtn, .theme1 .resetBtn {
   background-color: hsl(185deg, 42%, 37%) !important;
   box-shadow: 0 4px 0 0.2px hsl(185deg, 58%, 25%) !important;
 }
-.theme2 .equalesBtn {
+.theme1 .equalesBtn {
   background-color: hsl(25deg, 98%, 40%) !important;
   box-shadow: 0 4px 0 0.2px hsl(25deg, 99%, 27%) !important;
 }
+.theme1 .delBtn, .theme1 .resetBtn, .theme1 .equalesBtn {
+  color: hsl(0deg, 0%, 100%) !important;
+}
 
-.theme3 .calc {
+.theme2 .calc {
   background-color: hsl(268deg, 75%, 9%);
 }
-.theme3 .calc__container-logo, .theme3 .labels, .theme3 .calc__theme {
+.theme2 .calc__container-logo, .theme2 .labels, .theme2 .calc__theme {
   color: hsl(52deg, 100%, 62%);
 }
-.theme3 .calc__header-btns {
+.theme2 .calc__header-btns {
   background-color: hsl(268deg, 71%, 12%) !important;
 }
-.theme3 .toggleBtn {
+.theme2 .toggleBtn {
   background-color: hsl(176deg, 100%, 44%) !important;
 }
-.theme3 .calc__display {
+.theme2 .calc__display {
   background-color: hsl(268deg, 71%, 12%);
 }
-.theme3 .calc__numberContainer {
+.theme2 .calc__numberContainer {
   background-color: hsl(268deg, 71%, 12%) !important;
 }
-.theme3 .numsAndOperators {
+.theme2 .numsAndOperators {
   background-color: hsl(268deg, 47%, 21%) !important;
   box-shadow: 0 4px 0 0.2px hsl(290deg, 70%, 36%) !important;
 }
-.theme3 .delBtn, .theme3 .resetBtn {
+.theme2 .delBtn, .theme2 .resetBtn {
   background-color: hsl(281deg, 89%, 26%) !important;
   box-shadow: 0 4px 0 0.2px hsl(285deg, 91%, 52%) !important;
 }
-.theme3 .equalesBtn {
+.theme2 .equalesBtn {
   background-color: hsl(176deg, 100%, 44%) !important;
   box-shadow: 0 4px 0 0.2px hsl(177deg, 92%, 70%) !important;
+}
+.theme2 .delBtn, .theme2 .resetBtn {
+  color: hsl(0deg, 0%, 100%) !important;
+}
+.theme2 .equalesBtn {
+  color: hsl(198deg, 20%, 13%) !important;
+}
+.theme2 .numsAndOperators {
+  color: hsl(52deg, 100%, 62%) !important;
 }
 
 * {
