--- a/sass/main.css
+++ b/sass/main.css
@@ -32,6 +32,9 @@
 .theme0 .delBtn, .theme0 .resetBtn, .theme0 .equalesBtn {
   color: hsl(0deg, 0%, 100%) !important;
 }
+.theme0 .numsAndOperators:hover {
+  background-color: hsl(0deg, 0%, 100%) !important;
+}
 
 .theme1 .calc {
   background-color: hsl(0deg, 0%, 90%);
