--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -55,12 +55,12 @@
     //   background-color:  !important;
     // }
   }
-  .numsAndOperators{
-    &:hover{
-      background-color: var.$White !important;
-      box-shadow: var.hsl(27, 75%, 5%) !important;
-    }
-  }
+  // .numsAndOperators{
+  //   &:hover{
+  //     background-color: var.$White !important;
+  //     box-shadow: var.hsl(27, 75%, 5%) !important;
+  //   }
+  // }
   
 }
 .theme1{
