--- a/sass/main.css
+++ b/sass/main.css
@@ -32,8 +32,15 @@
   background-color: hsl(6deg, 63%, 50%) !important;
   box-shadow: 0 4px 0 0.2px hsl(6deg, 70%, 34%) !important;
 }
-.theme0 .delBtn, .theme0 .resetBtn, .theme0 .equalesBtn {
+.theme0 .equalesBtn {
   color: hsl(0deg, 0%, 100%) !important;
+}
+.theme0 .equalesBtn:hover {
+  background-color: 0 4px 0 0.2px yellow !important;
+}
+.theme0 .numsAndOperators:hover {
+  background-color: hsl(0deg, 0%, 100%) !important;
+  box-shadow: 0 4px 0 0.2px rgb(176, 173, 167) !important;
 }
 
 .theme1 .calc {
