--- a/sass/main.css
+++ b/sass/main.css
@@ -140,14 +140,22 @@
   color: hsl(0deg, 0%, 100%) !important;
 }
 .theme2 .delBtn:hover, .theme2 .resetBtn:hover {
-  background-color: hsl(185deg, 34%, 45%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(185deg, 54%, 36%) !important;
+  background-color: hsl(176deg, 92%, 64%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(177deg, 74%, 73%) !important;
 }
 .theme2 .equalesBtn {
   color: hsl(198deg, 20%, 13%) !important;
 }
+.theme2 .equalesBtn:hover {
+  background-color: hsl(177deg, 86%, 62%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(177deg, 83%, 77%) !important;
+}
 .theme2 .numsAndOperators {
   color: hsl(52deg, 100%, 62%) !important;
+}
+.theme2 .numsAndOperators:hover {
+  background-color: hsl(0deg, 0%, 100%) !important;
+  box-shadow: 0 4px 0 0.2px rgb(178, 175, 169) !important;
 }
 
 * {
