--- a/sass/main.css
+++ b/sass/main.css
@@ -32,23 +32,23 @@
   background-color: hsl(225deg, 21%, 49%) !important;
   box-shadow: 0 4px 0 0.2px hsl(224deg, 28%, 35%) !important;
 }
+.theme0 .delBtn:hover, .theme0 .resetBtn:hover {
+  background-color: hsl(225deg, 29%, 59%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(224deg, 28%, 35%) !important;
+}
 .theme0 .equalesBtn {
   background-color: hsl(6deg, 63%, 50%) !important;
   box-shadow: 0 4px 0 0.2px hsl(6deg, 70%, 34%) !important;
-}
-.theme0 .equalesBtn {
-  color: hsl(0deg, 0%, 100%) !important;
 }
 .theme0 .equalesBtn:hover {
   background-color: rgb(220, 89, 66) !important;
   box-shadow: 0 4px 0 0.2px rgb(160, 69, 53) !important;
 }
-.theme0 .delBtn, .theme0 .resetBtn {
+.theme0 .equalesBtn {
   color: hsl(0deg, 0%, 100%) !important;
 }
-.theme0 .delBtn:hover, .theme0 .resetBtn:hover {
-  background-color: hsl(225deg, 29%, 59%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(226deg, 18%, 42%) !important;
+.theme0 .delBtn, .theme0 .resetBtn {
+  color: hsl(0deg, 0%, 100%) !important;
 }
 
 .theme1 .calc {
@@ -84,23 +84,23 @@
   background-color: hsl(185deg, 42%, 37%) !important;
   box-shadow: 0 4px 0 0.2px hsl(185deg, 58%, 25%) !important;
 }
+.theme1 .delBtn:hover, .theme1 .resetBtn:hover {
+  background-color: hsl(185deg, 34%, 45%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(185deg, 58%, 25%) !important;
+}
 .theme1 .equalesBtn {
   background-color: hsl(25deg, 98%, 40%) !important;
   box-shadow: 0 4px 0 0.2px hsl(25deg, 99%, 27%) !important;
 }
-.theme1 .delBtn, .theme1 .resetBtn {
-  color: hsl(0deg, 0%, 100%) !important;
-}
-.theme1 .delBtn:hover, .theme1 .resetBtn:hover {
-  background-color: hsl(185deg, 34%, 45%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(185deg, 54%, 36%) !important;
-}
-.theme1 .equalesBtn {
-  color: hsl(0deg, 0%, 100%) !important;
-}
 .theme1 .equalesBtn:hover {
   background-color: hsl(25deg, 79%, 52%) !important;
   box-shadow: 0 4px 0 0.2px hsl(25deg, 80%, 42%) !important;
+}
+.theme1 .delBtn, .theme1 .resetBtn {
+  color: hsl(0deg, 0%, 100%) !important;
+}
+.theme1 .equalesBtn {
+  color: hsl(0deg, 0%, 100%) !important;
 }
 
 .theme2 .calc {
@@ -136,23 +136,26 @@
   background-color: hsl(281deg, 89%, 26%) !important;
   box-shadow: 0 4px 0 0.2px hsl(285deg, 91%, 52%) !important;
 }
+.theme2 .delBtn:hover, .theme2 .resetBtn:hover {
+  background-color: rgb(116, 14, 163) !important;
+  box-shadow: 0 4px 0 0.2px hsl(285deg, 91%, 52%) !important;
+}
 .theme2 .equalesBtn {
   background-color: hsl(176deg, 100%, 44%) !important;
   box-shadow: 0 4px 0 0.2px hsl(177deg, 92%, 70%) !important;
 }
+.theme2 .equalesBtn:hover {
+  background-color: hsl(177deg, 86%, 62%) !important;
+  box-shadow: 0 4px 0 0.2px hsl(177deg, 83%, 77%) !important;
+}
 .theme2 .delBtn, .theme2 .resetBtn {
   color: hsl(0deg, 0%, 100%) !important;
-}
-.theme2 .delBtn:hover, .theme2 .resetBtn:hover {
-  background-color: rgb(116, 14, 163) !important;
-  box-shadow: 0 4px 0 0.2px rgb(193, 41, 244) !important;
 }
 .theme2 .equalesBtn {
   color: hsl(198deg, 20%, 13%) !important;
 }
-.theme2 .equalesBtn:hover {
-  background-color: hsl(177deg, 86%, 62%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(177deg, 83%, 77%) !important;
+.theme2 .numsAndOperators {
+  color: hsl(52deg, 100%, 62%) !important;
 }
 
 * {
