--- a/sass/main.css
+++ b/sass/main.css
@@ -25,24 +25,39 @@
   box-shadow: 0 4px 0 0.2px hsl(28deg, 16%, 65%) !important;
 }
 .theme0 .numsAndOperators:hover {
-  background-color: hsl(0deg, 0%, 100%) !important;
-  box-shadow: 0 4px 0 0.2px rgb(176, 173, 167) !important;
+  filter: brightness(125%) !important;
+}
+.theme0 .numsAndOperators:active {
+  filter: brightness(125%) !important;
+  /* Key pressed effect */
+  transform: translateY(4px) !important;
+  box-shadow: none !important;
 }
 .theme0 .delBtn, .theme0 .resetBtn {
   background-color: hsl(225deg, 21%, 49%) !important;
   box-shadow: 0 4px 0 0.2px hsl(224deg, 28%, 35%) !important;
 }
 .theme0 .delBtn:hover, .theme0 .resetBtn:hover {
-  background-color: hsl(225deg, 29%, 59%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(224deg, 28%, 35%) !important;
+  filter: brightness(125%) !important;
+}
+.theme0 .delBtn:active, .theme0 .resetBtn:active {
+  filter: brightness(125%) !important;
+  /* Key pressed effect */
+  transform: translateY(4px) !important;
+  box-shadow: none !important;
 }
 .theme0 .equalesBtn {
   background-color: hsl(6deg, 63%, 50%) !important;
   box-shadow: 0 4px 0 0.2px hsl(6deg, 70%, 34%) !important;
 }
 .theme0 .equalesBtn:hover {
-  background-color: rgb(220, 89, 66) !important;
-  box-shadow: 0 4px 0 0.2px rgb(160, 69, 53) !important;
+  filter: brightness(125%) !important;
+}
+.theme0 .equalesBtn:active {
+  filter: brightness(125%) !important;
+  /* Key pressed effect */
+  transform: translateY(4px) !important;
+  box-shadow: none !important;
 }
 .theme0 .equalesBtn {
   color: hsl(0deg, 0%, 100%) !important;
@@ -77,24 +92,39 @@
   box-shadow: 0 4px 0 0.2px hsl(35deg, 11%, 61%) !important;
 }
 .theme1 .numsAndOperators:hover {
-  background-color: hsl(0deg, 0%, 100%) !important;
-  box-shadow: 0 4px 0 0.2px rgb(178, 175, 169) !important;
+  filter: brightness(125%) !important;
+}
+.theme1 .numsAndOperators:active {
+  filter: brightness(125%) !important;
+  /* Key pressed effect */
+  transform: translateY(4px) !important;
+  box-shadow: none !important;
 }
 .theme1 .delBtn, .theme1 .resetBtn {
   background-color: hsl(185deg, 42%, 37%) !important;
   box-shadow: 0 4px 0 0.2px hsl(185deg, 58%, 25%) !important;
 }
 .theme1 .delBtn:hover, .theme1 .resetBtn:hover {
-  background-color: hsl(185deg, 34%, 45%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(185deg, 58%, 25%) !important;
+  filter: brightness(125%) !important;
+}
+.theme1 .delBtn:active, .theme1 .resetBtn:active {
+  filter: brightness(125%) !important;
+  /* Key pressed effect */
+  transform: translateY(4px) !important;
+  box-shadow: none !important;
 }
 .theme1 .equalesBtn {
   background-color: hsl(25deg, 98%, 40%) !important;
   box-shadow: 0 4px 0 0.2px hsl(25deg, 99%, 27%) !important;
 }
 .theme1 .equalesBtn:hover {
-  background-color: hsl(25deg, 79%, 52%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(25deg, 80%, 42%) !important;
+  filter: brightness(125%) !important;
+}
+.theme1 .equalesBtn:active {
+  filter: brightness(125%) !important;
+  /* Key pressed effect */
+  transform: translateY(4px) !important;
+  box-shadow: none !important;
 }
 .theme1 .delBtn, .theme1 .resetBtn {
   color: hsl(0deg, 0%, 100%) !important;
@@ -129,24 +159,39 @@
   box-shadow: 0 4px 0 0.2px hsl(290deg, 70%, 36%) !important;
 }
 .theme2 .numsAndOperators:hover {
-  background-color: rgb(67, 38, 99) !important;
-  box-shadow: 0 4px 0 0.2px hsl(290deg, 70%, 36%) !important;
+  filter: brightness(125%) !important;
+}
+.theme2 .numsAndOperators:active {
+  filter: brightness(125%) !important;
+  /* Key pressed effect */
+  transform: translateY(4px) !important;
+  box-shadow: none !important;
 }
 .theme2 .delBtn, .theme2 .resetBtn {
   background-color: hsl(281deg, 89%, 26%) !important;
   box-shadow: 0 4px 0 0.2px hsl(285deg, 91%, 52%) !important;
 }
 .theme2 .delBtn:hover, .theme2 .resetBtn:hover {
-  background-color: rgb(116, 14, 163) !important;
-  box-shadow: 0 4px 0 0.2px hsl(285deg, 91%, 52%) !important;
+  filter: brightness(125%) !important;
+}
+.theme2 .delBtn:active, .theme2 .resetBtn:active {
+  filter: brightness(125%) !important;
+  /* Key pressed effect */
+  transform: translateY(4px) !important;
+  box-shadow: none !important;
 }
 .theme2 .equalesBtn {
   background-color: hsl(176deg, 100%, 44%) !important;
   box-shadow: 0 4px 0 0.2px hsl(177deg, 92%, 70%) !important;
 }
 .theme2 .equalesBtn:hover {
-  background-color: hsl(177deg, 86%, 62%) !important;
-  box-shadow: 0 4px 0 0.2px hsl(177deg, 83%, 77%) !important;
+  filter: brightness(125%) !important;
+}
+.theme2 .equalesBtn:active {
+  filter: brightness(125%) !important;
+  /* Key pressed effect */
+  transform: translateY(4px) !important;
+  box-shadow: none !important;
 }
 .theme2 .delBtn, .theme2 .resetBtn {
   color: hsl(0deg, 0%, 100%) !important;
