--- a/sass/main.css
+++ b/sass/main.css
@@ -279,6 +279,11 @@ body .calc .calc__container .calc__display {
   width: 100%;
   height: 90px;
   margin: 2rem 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  flex-direction: column;
+  padding: 10px;
   border-radius: 15px;
 }
 body .calc .calc__container .calc__numberContainer {
