--- a/sass/main.scss
+++ b/sass/main.scss
@@ -81,9 +81,12 @@ body{
         width: 100%;
         height: 90px;
         margin: 2rem 0;
-        // display: flex;
-        // justify-content: end;
-        // align-items: center;
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-end;
+        flex-direction: column;
+        padding: 10px;
+        
         // text-align:end;
         // #calc__input{
         // width: 100%;
