--- a/sass/main.css
+++ b/sass/main.css
@@ -277,14 +277,25 @@ body .calc .calc__container .calc__container-header .calc__header-themeContainer
 }
 body .calc .calc__container .calc__display {
   width: 100%;
-  height: 90px;
+  height: 150px;
   margin: 2rem 0;
   display: flex;
   justify-content: space-around;
   align-items: flex-end;
   flex-direction: column;
   padding: 10px;
+  word-wrap: break-word;
   border-radius: 15px;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+body .calc .calc__container .calc__display .previous-operand {
+  color: white;
+  font-size: 1.5rem;
+}
+body .calc .calc__container .calc__display .current-operand {
+  color: white;
+  font-size: 2.5rem;
 }
 body .calc .calc__container .calc__numberContainer {
   padding: 1.6rem 1.3rem;
