--- a/sass/main.scss
+++ b/sass/main.scss
@@ -79,20 +79,25 @@ body{
       }
       .calc__display{
         width: 100%;
-        height: 90px;
+        height: 150px;
         margin: 2rem 0;
         display: flex;
         justify-content: space-around;
         align-items: flex-end;
         flex-direction: column;
         padding: 10px;
-        
-        // text-align:end;
-        // #calc__input{
-        // width: 100%;
-        // height: 90px;
+        word-wrap: break-word;
         border-radius: 15px;
-        // }
+        word-wrap: break-word;
+        word-break: break-all;
+        .previous-operand{
+          color: white;
+          font-size: 1.5rem;
+        }
+        .current-operand{
+          color: white;
+          font-size: 2.5rem;
+        }
       }
       .calc__numberContainer{
         padding: 1.6rem 1.3rem;
