--- a/sass/main.scss
+++ b/sass/main.scss
@@ -93,10 +93,12 @@ body{
         .previous-operand{
           color: white;
           font-size: 1.5rem;
+          overflow: hidden;
         }
         .current-operand{
           color: white;
           font-size: 2.5rem;
+          overflow: hidden;
         }
       }
       .calc__numberContainer{
