--- a/sass/main.css
+++ b/sass/main.css
@@ -285,7 +285,7 @@ body .calc .calc__container .calc__container-header .calc__header-themeContainer
 }
 body .calc .calc__container .calc__display {
   width: 100%;
-  height: 130px;
+  height: clamp(89px, 20vw, 120px);
   margin: 2rem 0;
   display: flex;
   justify-content: space-around;
