--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,3 @@
-// @use 'variables' as var;
 @use 'mixin';
 
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap');
@@ -116,7 +115,7 @@ body{
             height: 70px;
             text-align: center;
             border-radius: 5px;
-            font-size: 2.1rem;
+            font-size: clamp(2.1rem, 1.81425rem + 1.27vw, 2.6rem);
             &:hover{
               cursor: pointer;
             }
@@ -156,4 +155,12 @@ body{
   }
 }
 
-
+.attribution { font-size: 15px;
+   text-align: center;
+   padding-bottom: 2rem;
+   color: brown;
+   a { 
+    color: hsl(228, 45%, 44%);
+  }
+  }
+// .attribution a { color: hsl(228, 45%, 44%);}
