--- a/sass/main.scss
+++ b/sass/main.scss
@@ -65,6 +65,7 @@ body{
 
             .toggleBtn{
               all:unset;
+              font-size: 0;
               height:17px;
               width:17px;
               border-radius: 50%;
